--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,22 @@
 {
   "name": "Remove Element",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "Creates a contextual menu item to remove an element from the DOM",
-  "manifest_version": 2,
+  "manifest_version": 3,
   "icons": {
     "48": "icon48.png",
     "128": "icon128.png"
   },
   "permissions": [
     "contextMenus",
-    "tabs",
+    "tabs"
+  ],
+  "host_permissions": [
     "http://*/*",
     "https://*/*"
   ],
   "background": {
-    "scripts": [
-      "background.js"
-    ]
+    "service_worker": "background.js"
   },
   "content_scripts": [
     {
@@ -24,9 +24,9 @@
         "http://*/*",
         "https://*/*"
       ],
-      "js": [
-        "remove.js"
-      ]
+      "js": ["remove.js"],
+      "all_frames": true,
+      "run_at": "document_start"
     }
   ]
 }
